unpackaged/main/default/objects/Supplies_Quote__c/Supplies_Quote__c.object-meta.xml
<CustomObject>
    <description>This stores the P21 Quotes as records in Salesforce before transformation.</description>
    <label>Supplies Quote</label>
    <nameField>
        <label>Supplies Quote Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supplies Quotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>