unpackaged/main/default/objects/Supplies_Quote__c/fields/Account_Domain__c.field-meta.xml
<CustomField>
    <fullName>Account_Domain__c</fullName>
    <label>Account Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>