unpackaged/main/default/objects/Supplies_Quote__c/fields/AccountID__c.field-meta.xml
<CustomField>
    <fullName>AccountID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AccountID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Supplies Quotes</relationshipLabel>
    <relationshipName>Supplies_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>