unpackaged/main/default/objects/Supplies_Quote__c/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ContactId</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Supplies Quotes</relationshipLabel>
    <relationshipName>Supplies_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>