unpackaged/main/default/objects/Supplies_Quote__c/fields/Is_Generic__c.field-meta.xml
<CustomField>
    <fullName>Is_Generic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Generic</label>
    <type>Checkbox</type>
</CustomField>