unpackaged/main/default/objects/Supplies_Quote__c/fields/OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OpportunityId</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Supplies Quotes</relationshipLabel>
    <relationshipName>Supplies_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>