unpackaged/main/default/objects/Supplies_Quote__c/fields/P21_Account_DetailsID__c.field-meta.xml
<CustomField>
    <fullName>P21_Account_DetailsID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>P21 Account Details ID</label>
    <referenceTo>P21_Account_Details__c</referenceTo>
    <relationshipLabel>Supplies Quotes</relationshipLabel>
    <relationshipName>Supplies_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>