unpackaged/main/default/objects/Supplies_Quote__c/fields/P21_Contact_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>P21_Contact_Last_Name__c</fullName>
    <label>P21 Contact Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>