unpackaged/main/default/objects/Supplies_Quote__c/fields/P21_ContactID__c.field-meta.xml
<CustomField>
    <fullName>P21_ContactID__c</fullName>
    <label>P21 ContactID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>