unpackaged/main/default/objects/Supplies_Quote__c/fields/P21_CustomerID__c.field-meta.xml
<CustomField>
    <fullName>P21_CustomerID__c</fullName>
    <externalId>true</externalId>
    <label>P21 CustomerID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>