unpackaged/main/default/objects/Supplies_Quote__c/fields/P21_ERP_ID__c.field-meta.xml
<CustomField>
    <fullName>P21_ERP_ID__c</fullName>
    <description>The unique Order ID which can be a Quote from P21 Order Entry.</description>
    <externalId>true</externalId>
    <label>P21 ERP ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>