unpackaged/main/default/objects/Supplies_Quote__c/fields/P21_Order_Erp_Flag__c.field-meta.xml
<CustomField>
    <fullName>P21_Order_Erp_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>P21 Order Erp Flag</label>
    <type>Checkbox</type>
</CustomField>