unpackaged/main/default/objects/Supplies_Quote__c/fields/P21_Order_OE_ERP_ID__c.field-meta.xml
<CustomField>
    <fullName>P21_Order_OE_ERP_ID__c</fullName>
    <description>Represent Order Entry</description>
    <label>P21 Order OE ERP ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>