unpackaged/main/default/objects/Supplies_Quote__c/fields/P21_Physical_Address__c.field-meta.xml
<CustomField>
    <fullName>P21_Physical_Address__c</fullName>
    <label>P21 Physical Address</label>
    <type>TextArea</type>
</CustomField>