unpackaged/main/default/objects/Supplies_Quote__c/fields/P21_Physical_City__c.field-meta.xml
<CustomField>
    <fullName>P21_Physical_City__c</fullName>
    <label>P21 Physical City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>