unpackaged/main/default/objects/Supplies_Quote__c/fields/P21_Physical_Country__c.field-meta.xml
<CustomField>
    <fullName>P21_Physical_Country__c</fullName>
    <label>P21 Physical Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>