unpackaged/main/default/objects/Supplies_Quote__c/fields/Quote_Email__c.field-meta.xml
<CustomField>
    <fullName>Quote_Email__c</fullName>
    <label>Quote Email</label>
    <type>Email</type>
</CustomField>