unpackaged/main/default/objects/Supplies_Quote__c/fields/Quote_P21_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Quote_P21_Created_Date__c</fullName>
    <label>Quote Created Date</label>
    <type>Date</type>
</CustomField>