unpackaged/main/default/objects/Supplies_Quote__c/fields/Quote_P21_Created_Time__c.field-meta.xml
<CustomField>
    <fullName>Quote_P21_Created_Time__c</fullName>
    <label>Quote P21 Created Time</label>
    <type>DateTime</type>
</CustomField>