unpackaged/main/default/objects/Supplies_Quote__c/fields/Quote_P21_Last_Updated_Time__c.field-meta.xml
<CustomField>
    <fullName>Quote_P21_Last_Updated_Time__c</fullName>
    <label>Quote P21 Last Updated Time</label>
    <type>DateTime</type>
</CustomField>