unpackaged/main/default/objects/Supplies_Quote__c/fields/Quote_Price__c.field-meta.xml
<CustomField>
    <fullName>Quote_Price__c</fullName>
    <label>Quote Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>