unpackaged/main/default/objects/Supplies_Quote__c/fields/SFP_Flag__c.field-meta.xml
<CustomField>
    <fullName>SFP_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SFP Flag</label>
    <type>Checkbox</type>
</CustomField>