unpackaged/main/default/objects/Supplies_Quote__c/fields/XometryJobID__c.field-meta.xml
<CustomField>
    <fullName>XometryJobID__c</fullName>
    <externalId>true</externalId>
    <label>XometryJobID</label>
    <length>55</length>
    <type>Text</type>
</CustomField>