unpackaged/main/default/objects/Supplies_Quote__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Quote_P21_Created_Date__c</columns>
    <columns>NAME</columns>
    <columns>AccountID__c</columns>
    <columns>P21_Account_DetailsID__c</columns>
    <columns>P21_ERP_ID__c</columns>
    <columns>ContactId__c</columns>
    <columns>OpportunityId__c</columns>
    <columns>P21_ContactID__c</columns>
    <columns>Quote_Email__c</columns>
    <columns>Quote_Price__c</columns>
    <columns>P21_Order_Erp_Flag__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>