unpackaged/main/default/objects/Supplies_Quote__c/listViews/Today_s_Supply_Quotes.listView-meta.xml
<ListView>
    <fullName>Today_s_Supply_Quotes</fullName>
    <columns>NAME</columns>
    <columns>Account_Domain__c</columns>
    <columns>AccountID__c</columns>
    <columns>P21_Order_Erp_Flag__c</columns>
    <columns>P21_OE_Status__c</columns>
    <columns>P21_Order_OE_ERP_ID__c</columns>
    <columns>PartnerID__c</columns>
    <columns>Quote_P21_Created_Date__c</columns>
    <columns>Quote_Price__c</columns>
    <columns>Quote_Email__c</columns>
    <columns>P21_ERP_ID__c</columns>
    <columns>P21_CustomerID__c</columns>
    <columns>OpportunityId__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today's Supply Quotes</label>
    <sharedTo>
        <roleAndSubordinatesInternal>SellerMarketplace</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>